--- a/index.html
+++ b/index.html
@@ -120,38 +120,38 @@
 
 <div id="main-root">
     <header class="header-main">
-        <h1>教育心理學測驗專區</h1>
+        <h1>教育心理學測驗牛刀小試</h1>
     </header>
 
     <main class="menu-card">
         <h2>請選擇測驗主題</h2>
         <ul class="quiz-list">
-            
+
             <li class="quiz-item">
-                <a href="edpsy-quiz.html">
-                    社會發展 (Bronfenbrenner)
-                    <span class="quiz-meta">主題 3-1 | 牛刀小試</span>
+                <a href="page1.html">
+                   主題 1｜教育心理學概論
+                    <span class="quiz-meta"> </span>
                 </a>
             </li>
 
             <li class="quiz-item">
                 <a href="page2.html">
-                    認知發展 (Piaget)
-                    <span class="quiz-meta">主題 2-1 | 預計 15 題</span>
+                    主題 2｜認知發展
+                    <span class="quiz-meta">PIAGET、VYGOTSKY</span>
                 </a>
             </li>
 
             <li class="quiz-item">
-                <a href="page3.html">
-                    學習理論 (Skinner)
-                    <span class="quiz-meta">主題 4-2 | 即將開放</span>
+                <a href="Page3-1.html">
+                    主題 3-1｜社會發展
+                    <span class="quiz-meta">BRONFENBRENNER</span>
                 </a>
             </li>
             
             </ul>
 
         <div class="author-info">
-            王孜𡩋老師製作 | GitHub Pages 託管
+            王孜𡩋老師製作 2025
         </div>
     </main>
 </div>
