--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             text-decoration: none;
             color: var(--ink);
             font-weight: 700;
-            font-size: 18px;
+            font-size: 20px; /* <--- 已調整：主連結文字放大 */
             transition: background .15s ease, transform .15s ease;
             box-shadow: 0 4px 0 rgba(0,0,0,.08);
             text-align: center;
@@ -92,7 +92,7 @@
         }
 
         .quiz-item .quiz-meta {
-            font-size: 14px;
+            font-size: 16px; /* <--- 已調整：次要資訊放大 */
             color: var(--ink-2);
             display: block;
             margin-top: 4px;
@@ -112,7 +112,11 @@
             .header-main { padding: 12px; border-width: 2px; }
             .header-main h1 { font-size: 24px; }
             .menu-card { padding: 16px; border-radius: 12px; border-width: 2px; }
-            .quiz-item a { padding: 12px 16px; font-size: 16px; border-radius: 8px; }
+            .quiz-item a { 
+                padding: 12px 16px; 
+                font-size: 18px; /* <--- 已調整：手機版連結文字放大 */
+                border-radius: 8px; 
+            }
         }
     </style>
 </head>
