--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <li class="quiz-item">
                 <a href="page1.html">
                    主題 1｜教育心理學概論
-                    <span class="quiz-meta"> </span>
+                    <span class="quiz-meta">OVERVIEW</span>
                 </a>
             </li>
 
