--- a/Page3-1.html
+++ b/Page3-1.html
@@ -58,7 +58,6 @@
     --red-ink:#7F1D1D;
   }
   
-  /* --- 新增：確保整個頁面都是淡黃色背景 --- */
   body {
     background: var(--yellow-bg);
     margin: 0;
@@ -71,16 +70,10 @@
     position:relative; background:var(--yellow); color:var(--ink);
     border:3px solid var(--ink); border-radius:14px; padding:16px 16px 8px;
   }
-  /* --- 修改：標題字體放大 --- */
-  .quiz-header h1{ margin:0; text-align:center; font-size:28px; letter-spacing:.3px; font-weight:800; }
+  .quiz-header h1{ margin:0; text-align:center; font-size:26px; letter-spacing:.3px; font-weight:800; }
   .quiz-header .meta{
     display:flex; justify-content:space-between; align-items:center;
     margin-top:10px; font-weight:700; color:var(--ink-2);
-  }
-  .btn-ghost.sm{
-    position:absolute; right:14px; top:14px;
-    background:#F3C245; color:var(--ink); border:1px solid rgba(0,0,0,.25);
-    border-radius:999px; padding:8px 12px; cursor:pointer;
   }
 
   .intro-card{
@@ -92,23 +85,19 @@
     text-align:center;
   }
   .intro-inner{ max-width:520px; margin:0 auto; }
-  .intro-topline{ color:#6b7280; font-weight:800; letter-spacing:.2em; }
   .intro-smalltag{
     display:inline-block; margin:16px 0 20px;
     background:#f0b33e; color:#fff; font-weight:800;
     padding:8px 14px; border-radius:999px; letter-spacing:.2px;
   }
-  /* --- 修改：主題字體放大 --- */
-  .intro-topicno{ color:#e0a200; font-weight:900; font-size:24px; margin-top:4px; }
-  .intro-title{ font-size:44px; font-weight:900; color:#111; margin:6px 0 8px; }
-  .intro-sub{ font-size:24px; font-weight:800; color:#111; border-top:3px solid #111; display:inline-block; padding-top:8px; }
-  
+  .intro-topicno{ color:#e0a200; font-weight:900; font-size:22px; margin-top:4px; }
+  .intro-title{ font-size:42px; font-weight:900; color:#111; margin:6px 0 8px; }
+  .intro-sub{ font-size:22px; font-weight:800; color:#111; border-top:3px solid #111; display:inline-block; padding-top:8px; }
   .intro-author{ color:#666; margin:38px 0 10px; }
   .intro-actions{ margin-top:8px; display:flex; justify-content:center; }
   
-  /* --- 修改：按鈕字體放大 --- */
-  .btn{ border:0; border-radius:12px; cursor:pointer; font-size:18px; padding:12px 18px; font-weight:700; }
-  .btn.lg{ padding:14px 22px; min-width:220px; font-size:20px; }
+  .btn{ border:0; border-radius:12px; cursor:pointer; font-size:16px; padding:12px 18px; font-weight:700; }
+  .btn.lg{ padding:14px 22px; min-width:220px; font-size:18px; }
   .btn-primary{ background:#199F4B; color:#fff; }
   .btn-primary:disabled{ opacity:.6; cursor:not-allowed; }
   .btn-primary:not(:disabled):hover{ filter:brightness(.95); }
@@ -125,17 +114,15 @@
   }
   .qno{ font-weight:800; font-size:18px; color:var(--ink); }
 
-  /* --- 修改：題幹字體放大 --- */
   .question{
-    font-size:26px; font-weight:800; line-height:1.85; color:#111827; margin:10px 0 16px;
+    font-size:22px; font-weight:800; line-height:1.85; color:#111827; margin:10px 0 16px;
     white-space:pre-wrap;
   }
 
   .options{ display:grid; gap:14px; }
-  /* --- 修改：選項字體放大 --- */
   .opt{
     width:100%; text-align:left; border:2px solid transparent; border-radius:14px;
-    background:var(--neutral); padding:14px 16px; font-size:22px;
+    background:var(--neutral); padding:14px 16px; font-size:20px;
     cursor:pointer;
     transition:.12s ease; font-weight:700; color:#1f2937;
     white-space:pre-wrap;
@@ -154,62 +141,45 @@
   .qsource{ margin-top:12px; font-size:13px; color:#555; font-weight:500; }
   .feedback + .qsource{ margin-top:12px; }
   
-/* 1) 避免 iOS Safari 自動放大字（表單/按鈕尤為明顯） */
 html { -webkit-text-size-adjust: 100%; }
-
-/* 2) 左對齊保險（有些容器樣式會覆蓋） */
 .question, .options, .opt, .feedback, .qsource { text-align: left; }
-
-/* 3) 按鈕觸控優化：移除點擊高亮、縮短點擊延遲 */
-.btn, .opt {
-  -webkit-tap-highlight-color: transparent;
-  touch-action: manipulation;
-}
-
-/* 4) 觸控裝置：移除 hover 動畫與陰影，避免滾動卡卡 */
+.btn, .opt { -webkit-tap-highlight-color: transparent; touch-action: manipulation; }
 @media (hover: none) {
   .opt { transition: none; }
   .opt:hover { transform: none; box-shadow: none; }
 }
 
-/* 5) 手機版排版與字級（寬度 ≤ 480px） */
+/* --- 手機版樣式調整 --- */
 @media (max-width: 480px) {
   #quiz-wrap { padding: 0 10px; }
 
   .quiz-header { padding: 12px 12px 6px; border-width: 2px; }
-  /* --- 修改：手機版標題字體放大 --- */
-  .quiz-header h1 { font-size: clamp(20px, 5.5vw, 24px); }
+  .quiz-header h1 { font-size: 24px; } /* 同 index.html 標題大小 */
   .quiz-header .meta { font-size: 14px; }
 
   .intro-card, .quiz-card { padding: 16px; border-radius: 12px; border-width: 2px; }
   .badge { padding: 6px 10px; }
   .qno { font-size: 16px; }
 
-  /* --- 修改：手機版題幹字體放大 --- */
   .question {
-    font-size: 22px;
+    font-size: 20px; /* 參考 index.html 連結大小調整 */
     line-height: 1.6;
     margin: 8px 0 12px;
     font-weight: 700;
   }
 
   .options { gap: 10px; }
-  /* --- 修改：手機版選項字體放大 --- */
   .opt {
-    font-size: 20px !important;
+    font-size: 20px !important; /* 同 index.html 連結大小 */
     padding: 12px 14px;
     border-radius: 12px;
-    text-align: left !important;
-    white-space: pre-wrap;
-    tab-size: 2;
-    font-weight: 600;
+    font-weight: 700;
   }
 
-  /* --- 修改：手機版主按鈕字體放大 --- */
   .btn.lg {
     min-width: auto;
     width: 100%;
-    font-size: 18px;
+    font-size: 18px; /* 讓主要按鈕也清晰好按 */
     padding: 12px 16px;
   }
 
@@ -257,7 +227,6 @@ html { -webkit-text-size-adjust: 100%; }
   const elQ   = $('#question'), elOpts = $('#options'), elFb = $('#feedback'), elSrc = $('#source');
   const elNext= $('#nextBtn'), elProg = $('#progress'), elScore = $('#score');
   const elQno = $('#qNo');
-  const elFs  = $('#fsBtn'), root = $('#quiz-wrap');
   const aiBtn = $('#aiBtn');
   const perplexityBtn = $('#perplexityBtn');
 
@@ -266,8 +235,6 @@ html { -webkit-text-size-adjust: 100%; }
     quizCard.style.display = '';
     await loadQuiz();
   });
-
-  bindFS();
 
   async function loadQuiz(){
     results.length = 0;
@@ -493,26 +460,6 @@ ${answerText}
     await fetch(url).catch(()=>{});
   }
 
-  function bindFS(){
-    updateFsBtn();
-    elFs.addEventListener('click', toggleFS);
-    document.addEventListener('fullscreenchange', updateFsBtn);
-  }
-  function toggleFS(){
-    const isFull = !!document.fullscreenElement;
-    if (!isFull){
-      const el = root;
-      const req = el.requestFullscreen || el.webkitRequestFullscreen || el.msRequestFullscreen;
-      if (req) req.call(el); else alert('此環境不支援全螢幕。');
-    }else{
-      const exit = document.exitFullscreen || document.webkitExitFullscreen || document.msExitFullscreen;
-      if (exit) exit.call(document);
-    }
-  }
-  function updateFsBtn(){
-    const isFull = !!document.fullscreenElement;
-    elFs.textContent = isFull ? '退出全螢幕' : '全螢幕';
-  }
   function toQuery(obj){
     const parts=[];
     for (const [k,v] of Object.entries(obj)){
