--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <ul class="quiz-list">
 
             <li class="quiz-item">
-                <a href="page1.html">
+                <a href="Page1.html">
                    主題 1｜教育心理學概論
                     <span class="quiz-meta">OVERVIEW</span>
                 </a>
