--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             text-align: center;
             margin-top: 30px;
             color: #666;
-            font-size: 14px;
+            font-size: 18px;
         }
 
         /* 手機版優化 */
@@ -139,7 +139,7 @@
             </li>
 
             <li class="quiz-item">
-                <a href="page2.html">
+                <a href="Page2.html">
                     主題 2｜認知發展
                     <span class="quiz-meta">PIAGET、VYGOTSKY</span>
                 </a>
