--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         .menu-card h2 {
             font-size: 20px;
             font-weight: 900;
-            color: #111;
+            color: #F9D3D1;
             text-align: center;
-            margin: 0 0 20px;
+            margin: 0 0 22px;
         }
         
         .quiz-list {
