--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         .menu-card h2 {
             font-size: 20px;
             font-weight: 900;
-            color: #F9D3D1;
+            color: #7F1D1D;
             text-align: center;
             margin: 0 0 22px;
         }
