--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             padding: 28px 20px;
         }
         .menu-card h2 {
-            font-size: 20px;
+            font-size: 28px;
             font-weight: 900;
-            color: #7F1D1D;
+            color: #e0a200;
             text-align: center;
-            margin: 0 0 22px;
+            margin: 0 0 24px;
         }
         
         .quiz-list {
@@ -132,21 +132,21 @@
         <ul class="quiz-list">
 
             <li class="quiz-item">
-                <a href="Page1.html">
+                <a href="Page1.html" target="_blank">
                    主題 1｜教育心理學概論
                     <span class="quiz-meta">OVERVIEW</span>
                 </a>
             </li>
 
             <li class="quiz-item">
-                <a href="Page2.html">
+                <a href="Page2.html" target="_blank">
                     主題 2｜認知發展
                     <span class="quiz-meta">PIAGET、VYGOTSKY</span>
                 </a>
             </li>
 
             <li class="quiz-item">
-                <a href="Page3-1.html">
+                <a href="Page3-1.html" target="_blank">
                     主題 3-1｜社會發展
                     <span class="quiz-meta">BRONFENBRENNER</span>
                 </a>
@@ -155,7 +155,7 @@
             </ul>
 
         <div class="author-info">
-            王孜𡩋老師製作 2025
+            <a href="https://sites.google.com/view/tn-edpsy/" target="_blank">王孜𡩋老師製作</a>  ©2025
         </div>
     </main>
 </div>
