--- a/index.html
+++ b/index.html
@@ -133,21 +133,21 @@
 
             <li class="quiz-item">
                 <a href="Page1.html" target="_blank">
-                   主題 1｜教育心理學概論
+                   【主題 1 】教育心理學概論
                     <span class="quiz-meta">OVERVIEW</span>
                 </a>
             </li>
 
             <li class="quiz-item">
                 <a href="Page2.html" target="_blank">
-                    主題 2｜認知發展
+                    【主題 2 】認知發展
                     <span class="quiz-meta">PIAGET、VYGOTSKY</span>
                 </a>
             </li>
 
             <li class="quiz-item">
                 <a href="Page3-1.html" target="_blank">
-                    主題 3-1｜社會發展
+                    【主題 3-1 】社會發展
                     <span class="quiz-meta">BRONFENBRENNER</span>
                 </a>
             </li>
