--- a/Page2.html
+++ b/Page2.html
@@ -455,7 +455,7 @@
         results.length = 0;
 
         setMeta(0,0);
-        elQ.textContent = '載入題目中…';
+        elQ.textContent = '載入題目中，請耐心等候…';
         elOpts.innerHTML = ''; elNext.disabled = true;
 
         try{
