--- a/Page2.html
+++ b/Page2.html
@@ -375,7 +375,7 @@
           <div class="intro-smalltag">牛刀小試</div>
           <div class="intro-topicno" id="introTopicNo">主題 2</div>
           <div class="intro-title" id="introTitle">認知發展</div>
-          <div class="intro-sub" id="introSub"> </div>
+          <div class="intro-sub" id="introSub"></div>
           <div class="intro-author" id="introAuthor">王孜𡩋老師製作</div>
           <div class="intro-actions">
             <button id="startBtn" class="btn btn-primary lg">開始測驗</button>
@@ -411,7 +411,7 @@
         n: 10,
         unit: ['教育心理學'],
         sub:  ['2認知發展',''],
-        tags: ['',''],
+        tags: ['Piaget','Vygotsky'],
         tags_mode: 'any'
       };
 
@@ -419,7 +419,7 @@
         topLine: '教育心理學',
         topicNo: '主題 2',
         title: '認知發展',
-        sub: ' ',
+        sub: 'Piaget、Vygotsky',
         author: '王孜𡩋老師製作'
       };
 
