--- a/index.html
+++ b/index.html
@@ -151,6 +151,13 @@
                     <span class="quiz-meta">BRONFENBRENNER</span>
                 </a>
             </li>
+
+                        <li class="quiz-item">
+                <a href="Page3-2.html" target="_blank">
+                    【主題 3-2 】社會發展
+                    <span class="quiz-meta">ERIKSON、MARCIA</span>
+                </a>
+            </li>
             
             </ul>
 
