--- a/index.html
+++ b/index.html
@@ -158,6 +158,13 @@
                     <span class="quiz-meta">ERIKSON、MARCIA</span>
                 </a>
             </li>
+
+                          <li class="quiz-item">
+                <a href="Page3-3.html" target="_blank">
+                    【主題 3-3 】道德發展
+                    <span class="quiz-meta">PIAGET、KOHLBERG、GILLIGAN</span>
+                </a>
+            </li>
             
             </ul>
 
