--- a/Page3.html
+++ b/Page3.html
@@ -419,7 +419,7 @@
         topLine: '教育心理學',
         topicNo: '主題 3',
         title: '社會與道德發展',
-        sub: 'BRONFENBRENNER／ERIKSON、MARCIA／PIAGET、KOHLBERG、GILLIGAN',
+        sub: 'Bronfenbrenner／Erikson、Marcia／Piaget、Kohlberg、Gilligan',
         author: '王孜𡩋老師製作'
       };
 
