--- a/Page5.html
+++ b/Page5.html
@@ -275,10 +275,10 @@
                     
                     <!-- 動作按鈕 -->
                     <div class="intro-actions">
-                        <!-- 點擊會回到瀏覽紀錄的上一個頁面 -->
-                        <button class="btn btn-secondary lg" onclick="window.history.back()">
+                        <!-- 點擊會導向指定的主題列表連結 -->
+                        <a href="https://sites.google.com/view/tn-edpsy/quiz" class="btn btn-secondary lg" style="text-decoration: none; display: inline-block;">
                             返回主題列表
-                        </button>
+                        </a>
                     </div>
 
                     <!-- 頁腳作者資訊 (使用 intro-author 樣式) -->
