--- a/Page6.html
+++ b/Page6.html
@@ -270,7 +270,7 @@
                         <p>這個主題的測驗還在孜𡩋老師的「秘密校稿室」裡，</p>
                         <p>為了確保呈現最完美的狀態，得請你再等等喔！</p>
                         <p>建議先複習其他已經開放的主題，</p>
-                        <p>等開放之後，我們再一起挑戰吧！😉</p>
+                        <p>等這個主題正式開放之後，我們再一起挑戰吧！😉</p>
                     </div>
                     
                     <!-- 動作按鈕 -->
