--- a/index.html
+++ b/index.html
@@ -165,6 +165,13 @@
                     <span class="quiz-meta">PIAGET、KOHLBERG、GILLIGAN</span>
                 </a>
             </li>
+
+                          <li class="quiz-item">
+                <a href="Page4.html" target="_blank">
+                    【主題 4 】行為取向學習理論
+                    <span class="quiz-meta">PAVLOV、WATSON、TRONDIKE、SKINNER</span>
+                </a>
+            </li>
             
             </ul>
 
