--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                           <li class="quiz-item">
                 <a href="Page4.html" target="_blank">
                     【主題 4 】行為取向學習理論
-                    <span class="quiz-meta">PAVLOV、WATSON、TRONDIKE、SKINNER</span>
+                    <span class="quiz-meta">PAVLOV、WATSON、THORNDIKE、SKINNER</span>
                 </a>
             </li>
             
